--- a/web/welcomePrimefaces.xhtml
+++ b/web/welcomePrimefaces.xhtml
@@ -27,19 +27,20 @@
 
                 <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
                     <p:menu>
-                        <p:submenu label="Resources">
-                            <p:menuitem value="Demo" url="http://www.primefaces.org/showcase-labs/ui/home.jsf" />
-                            <p:menuitem value="Documentation" url="http://www.primefaces.org/documentation.html" />
-                            <p:menuitem value="Forum" url="http://forum.primefaces.org/" />
-                            <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
-
+                        <p:submenu label="Menu">
+                            <p:menuitem value="Fusion" url="#" />
+                            <p:menuitem value="Suppression" url="#" />
+                            <p:menuitem value="Modifier l'ordre des pages" url="#" />
+                            <p:menuitem value="Signer le Pdf" url="#" />
+                            <p:menuitem value="Extraction image d'un Pdf" url="#" />
+                            <p:menuitem value="Image en Pdf" url="#" />
+                            <p:menuitem value="Extraction page Pdf" url="#" />
                         </p:submenu>
-
                     </p:menu>
                 </p:layoutUnit>
 
                 <p:layoutUnit position="center">
-                    Welcome to PrimeFaces
+                    Welcome to PDF 
                 </p:layoutUnit>
 
             </p:layout>
