--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -21,13 +21,13 @@
                 <p:layoutUnit position="west" size="250" header="Left" collapsible="true">
                     <p:menu>
                         <p:submenu label="Menu">
-                            <p:menuitem value="Fusion" url="#" />
-                            <p:menuitem value="Suppression" url="#" />
-                            <p:menuitem value="Modifier l'ordre des pages" url="#" />
-                            <p:menuitem value="Signer le Pdf" url="#" />
-                            <p:menuitem value="Extraction image d'un Pdf" url="#" />
-                            <p:menuitem value="Image en Pdf" url="#" />
-                            <p:menuitem value="Extraction page Pdf" url="#" />
+                            <p:menuitem value="Fusion" url="/FusionPdf" />
+                            <p:menuitem value="Suppression" url="/DeletePagesPdf" />
+                            <p:menuitem value="Modifier l'ordre des pages" url="/SortOrderPdf" />
+                            <p:menuitem value="Signer le Pdf" url="/SignPdf" />
+                            <p:menuitem value="Extraction image d'un Pdf" url="/ExtractImageToPdf" />
+                            <p:menuitem value="Image en Pdf" url="/UpdateImagePdf" />
+                            <p:menuitem value="Extraction page Pdf" url="/ExtractPagePdf" />
                         </p:submenu>
                     </p:menu>
                 </p:layoutUnit>
