--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,4 +1,4 @@
-    <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
@@ -11,6 +11,10 @@
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
                 <title>PrimeFaces</title>
             </f:facet>
+            <context-param>
+                <param-name>primefaces.THEME</param-name>
+                <param-value>nova-light</param-value>
+            </context-param>
         </h:head>
 
         <h:body>
@@ -33,7 +37,14 @@
                 </p:layoutUnit>
 
                 <p:layoutUnit position="center">
-
+                    <form>
+                        <p:button  href="/FusionPdf" value="Fusion"/>
+                        <h:graphicImage id="fusion" alt="" library="images" name="#{aleaBean.fusionImage}"/>
+                        <p:button  href="/SortOrderPdf" value="Trier"/>
+                        <h:graphicImage id="trier" alt="" library="images" name="#{aleaBean.trierImage}"/>
+                        <p:button  href="/SignPdf" value="Signer"/>
+                        <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
+                    </form>
                 </p:layoutUnit>
 
             </p:layout>
