--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
     <f:view contentType="text/html">
@@ -44,6 +43,19 @@
                         <h:graphicImage id="trier" alt="" library="images" name="#{aleaBean.trierImage}"/>
                         <p:button  href="/SignPdf" value="Signer"/>
                         <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
+                        <p:button  href="/DeletePagesPdf" value="Suppr des pages"/>
+                        <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
+                        <p:button  href="/ExtractImageToPdf" value="Extraire img"/>
+                        <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
+                        <p:button  href="/UpdateImagePdf" value="add img"/>
+                        <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
+                        <h:panelGrid columns="2" cellpadding="2">
+                            <h:form enctype="multipart/form-data" >
+                                <p:fileUpload value="#{fileUploadView.file}" label="Add image" mode="simple" />
+                                <p:commandButton icon="pi pi-save" value="Upload image" ajax="false" action="#{fileUploadView.upload}" disabled="false" />
+                            </h:form>
+                        </h:panelGrid>
+
                     </form>
                 </p:layoutUnit>
 
