--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -44,7 +44,16 @@
                         <h:graphicImage id="trier" alt="" library="images" name="#{aleaBean.trierImage}"/>
                         <p:button  href="/SignPdf" value="Signer"/>
                         <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
+                        <p:button  onclick="#{aleaBean.appelFonction()}" value="ACTION"/>
                     </form>
+
+
+                    <h:panelGrid columns="2" cellpadding="2">
+                        <h:form enctype="multipart/form-data" >
+                            <p:fileUpload value="#{fileUploadView.file}" label="Add image" mode="simple"/>
+                            <p:commandButton icon="pi pi-save" value="Upload image" ajax="false" action="#{fileUploadView.upload}" disabled="false" />
+                        </h:form>
+                    </h:panelGrid>
                 </p:layoutUnit>
 
             </p:layout>
