--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -29,7 +29,7 @@
                             <p:menuitem value="Suppression" url="/DeletePagesPdf" />
                             <p:menuitem value="Modifier l'ordre des pages" url="/SortOrderPdf" />
                             <p:menuitem value="Signer le Pdf" url="/SignPdf" />
-                            <p:menuitem value="Extraction image d'un Pdf" url="/ExtractImageToPdf" />
+                            <p:menuitem value="Update image to Pdf" url="/ExtractImageToPdf" />
                             <p:menuitem value="Image en Pdf" url="/UpdateImagePdf" />
                             <p:menuitem value="Extraction page Pdf" url="/ExtractPagePdf" />
                         </p:submenu>
