--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -45,6 +45,7 @@
                         <p:button  href="/SignPdf" value="Signer"/>
                         <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
                         <p:button  onclick="#{aleaBean.appelFonction()}" value="ACTION"/>
+                        <p:button  onclick="#{aleaBean.readPDf()}" value="Pouette"/>
                     </form>
 
 
