--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -59,6 +59,8 @@
 
             </p:layout>
 
+            <br />
+            <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
         </h:body>
 
     </f:view>
