--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -21,20 +21,19 @@
 
             <p:layout fullPage="true">
 
-
-                <p:layoutUnit position="west" size="250" header="Left" collapsible="true">
-                    <p:menu>
-                        <p:submenu label="Menu">
-                            <p:menuitem value="Fusion" url="/FusionPdf" />
-                            <p:menuitem value="Suppression" url="/DeletePagesPdf" />
-                            <p:menuitem value="Modifier l'ordre des pages" url="/SortOrderPdf" />
-                            <p:menuitem value="Signer le Pdf" url="/SignPdf" />
-                            <p:menuitem value="Update image to Pdf" url="/ExtractImageToPdf" />
-                            <p:menuitem value="Image en Pdf" url="/UpdateImagePdf" />
-                            <p:menuitem value="Extraction page Pdf" url="/ExtractPagePdf" />
-                        </p:submenu>
-                    </p:menu>
-                </p:layoutUnit>
+                <!--                <p:layoutUnit position="west" size="250" header="Left" collapsible="true">
+                                    <p:menu>
+                                        <p:submenu label="Menu">
+                                            <p:menuitem value="Fusion" url="/FusionPdf" />
+                                            <p:menuitem value="Suppression" url="/DeletePagesPdf" />
+                                            <p:menuitem value="Modifier l'ordre des pages" url="/SortOrderPdf" />
+                                            <p:menuitem value="Signer le Pdf" url="/SignPdf" />
+                                            <p:menuitem value="Update image to Pdf" url="/ExtractImageToPdf" />
+                                            <p:menuitem value="Image en Pdf" url="/UpdateImagePdf" />
+                                            <p:menuitem value="Extraction page Pdf" url="/ExtractPagePdf" />
+                                        </p:submenu>
+                                    </p:menu>
+                                </p:layoutUnit>-->
 
                 <p:layoutUnit position="center">
                     <form>
@@ -48,11 +47,11 @@
                         <p:button  onclick="#{aleaBean.readPDf()}" value="Pouette"/>
                     </form>
 
-
                     <h:panelGrid columns="2" cellpadding="2">
-                        <h:form enctype="multipart/form-data" >
-                            <p:fileUpload value="#{fileUploadView.file}" label="Add image" mode="simple"/>
-                            <p:commandButton icon="pi pi-save" value="Upload image" ajax="false" action="#{fileUploadView.upload}" disabled="false" />
+                        <h:form id="form" enctype="multipart/form-data">
+                            <p:growl id="messages" showDetail="true" />
+                            <p:fileUpload fileUploadListener="#{aleaBean.upload}" 
+                                          allowTypes="/(\.|\/)(gif|jpe?g|png|pdf)$/" sizeLimit="10000000" />
                         </h:form>
                     </h:panelGrid>
                 </p:layoutUnit>
@@ -65,4 +64,3 @@
 
     </f:view>
 </html>
-
