--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -53,6 +53,9 @@
                             <p:fileUpload fileUploadListener="#{aleaBean.upload}" 
                                           allowTypes="/(\.|\/)(gif|jpe?g|png|pdf)$/" sizeLimit="10000000" />
                         </h:form>
+                        <form action="DownloadPdf">
+                            <button name="dlBut" type="submit" value="ClickMeSenpaïNyaaa"/>
+                        </form>
                     </h:panelGrid>
                 </p:layoutUnit>
 
