--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -50,10 +50,11 @@
                     <h:panelGrid columns="2" cellpadding="2">
                         <h:form id="form" enctype="multipart/form-data">
                             <p:growl id="messages" showDetail="true" />
-                            <p:fileUpload fileUploadListener="#{aleaBean.upload}" 
+                            <p:fileUpload fileUploadListener="#{aleaBean.upload}"
                                           allowTypes="/(\.|\/)(gif|jpe?g|png|pdf)$/" sizeLimit="10000000" />
                         </h:form>
-                        <form action="DownloadPdf">
+                        <form action="DownloadPdf" method="GET">
+                            <input type="text" name="filePath" value="#{aleaBean.finalPath}"/>
                             <button name="dlBut" type="submit" value="ClickMeSenpaïNyaaa"/>
                         </form>
                     </h:panelGrid>
