--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -21,13 +21,42 @@
                     <p:layoutUnit position="center">
                         <form class="maJform">
 
-                            <h:graphicImage id="fusion" alt="" library="images" name="#{aleaBean.fusionImage}"/>
-                            <p:button  href="/FusionPdf" value="Fusion"/>
-                            <h:graphicImage id="trier" alt="" library="images" name="#{aleaBean.trierImage}"/>
-                            <p:button  href="/SortOrderPdf" value="Trier"/>
-                            <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
-                            <p:button  href="/SignPdf" value="Signer"/>
-                            <p:button id="creerPDF"  onclick="#{aleaBean.appelFonction()}" value="Créer PDF"/>
+            <p:layout fullPage="true">
+
+                <!--                <p:layoutUnit position="west" size="250" header="Left" collapsible="true">
+                                    <p:menu>
+                                        <p:submenu label="Menu">
+                                            <p:menuitem value="Fusion" url="/FusionPdf" />
+                                            <p:menuitem value="Suppression" url="/DeletePagesPdf" />
+                                            <p:menuitem value="Modifier l'ordre des pages" url="/SortOrderPdf" />
+                                            <p:menuitem value="Signer le Pdf" url="/SignPdf" />
+                                            <p:menuitem value="Update image to Pdf" url="/ExtractImageToPdf" />
+                                            <p:menuitem value="Image en Pdf" url="/UpdateImagePdf" />
+                                            <p:menuitem value="Extraction page Pdf" url="/ExtractPagePdf" />
+                                        </p:submenu>
+                                    </p:menu>
+                                </p:layoutUnit>-->
+
+                <p:layoutUnit position="center">
+                    <form>
+                        <p:button  href="/FusionPdf" value="Fusion"/>
+                        <h:graphicImage id="fusion" alt="" library="images" name="#{aleaBean.fusionImage}"/>
+                        <p:button  href="/SortOrderPdf" value="Trier"/>
+                        <h:graphicImage id="trier" alt="" library="images" name="#{aleaBean.trierImage}"/>
+                        <p:button  href="/SignPdf" value="Signer"/>
+                        <h:graphicImage id="signer" alt="" library="images" name="#{aleaBean.signerImage}"/>
+
+                    </form>
+
+                    <h:panelGrid columns="2" cellpadding="2">
+                        <h:form id="form" enctype="multipart/form-data">
+                            <p:growl id="messages" showDetail="true" />
+                            <p:fileUpload fileUploadListener="#{aleaBean.upload}"
+                                          allowTypes="/(\.|\/)(gif|jpe?g|png|pdf)$/" sizeLimit="10000000" />
+                        </h:form>
+                        <form action="DownloadPdf" method="GET">
+                            <input type="text" name="filePath" value="#{aleaBean.finalPath}"/>
+                            <button name="dlBut" type="submit" value="ClickMeSenpaïNyaaa"/>
                         </form>
                         <div class="uploadCenter">
                             <h:panelGrid columns="2" cellpadding="2">
